bindings/c/zkmetal.h

/* ================================================================
 * BN254 Fr (scalar field) Arithmetic
 * p = 21888242871839275222246405745257275088548364400416034343698204186575808495617
 * ================================================================ */

/** Montgomery multiplication: r = a * b * R^{-1} mod p. */
void bn254_fr_mul(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
/** Modular squaring (upper-triangle, fewer muls than mul). */
void bn254_fr_sqr(const uint64_t a[4], uint64_t r[4]);
/** Modular addition: r = (a + b) mod p. */
void bn254_fr_add(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
/** Modular subtraction: r = (a - b) mod p. */
void bn254_fr_sub(const uint64_t a[4], const uint64_t b[4], uint64_t r[4]);
/** Modular negation: r = -a mod p. */
void bn254_fr_neg(const uint64_t a[4], uint64_t r[4]);
/** Modular exponentiation: r = a^exp mod p (64-bit exponent). */
void bn254_fr_pow(const uint64_t a[4], uint64_t exp, uint64_t r[4]);
/** Modular inverse via Fermat's little theorem: r = a^{p-2} mod p. */
void bn254_fr_inverse(const uint64_t a[4], uint64_t r[4]);
/** Equality check: returns 1 if a == b, 0 otherwise. */
int bn254_fr_eq(const uint64_t a[4], const uint64_t b[4]);
/** Batch inverse via Montgomery's trick: out[i] = a[i]^{-1}. */
void bn254_fr_batch_inverse(const uint64_t *a, int n, uint64_t *out);
/** Horner polynomial evaluation: result = sum(coeffs[i]*z^i). */
void bn254_fr_horner_eval(const uint64_t *coeffs, int n, const uint64_t z[4],
                           uint64_t result[4]);
/** Inner product: result = sum(a[i] * b[i]). */
void bn254_fr_inner_product(const uint64_t *a, const uint64_t *b, int n, uint64_t *result);
/** Vector sum: result = sum(a[i]). */
void bn254_fr_vector_sum(const uint64_t *a, int n, uint64_t result[4]);
/* -- BN254 Fr batch ops (NEON vectorized, multi-threaded) --------- */

/** Batch add: result[i] = (a[i] + b[i]) mod p. */
void bn254_fr_batch_add_neon(uint64_t *result, const uint64_t *a,
                              const uint64_t *b, int n);
/** Batch subtract: result[i] = (a[i] - b[i]) mod p. */
void bn254_fr_batch_sub_neon(uint64_t *result, const uint64_t *a,
                              const uint64_t *b, int n);
/** Batch negate: result[i] = -a[i] mod p. */
void bn254_fr_batch_neg_neon(uint64_t *result, const uint64_t *a, int n);
/** Batch scalar multiply: result[i] = a[i] * scalar mod p. */
void bn254_fr_batch_mul_scalar_neon(uint64_t *result, const uint64_t *a,
                                     const uint64_t *scalar, int n);
/* -- BN254 Fr Montgomery assembly (ARM64) ------------------------- */

/** ARM64 asm CIOS Montgomery multiply for BN254 Fr. */
void mont_mul_asm(uint64_t *result, const uint64_t *a, const uint64_t *b);
/** C CIOS Montgomery multiply for BN254 Fr (reference). */
void mont_mul_c(uint64_t *result, const uint64_t *a, const uint64_t *b);